Allow platforms/quarkus-bom.yaml to declare multiple repos